# graphics-bmstu

AsmPrepare/: AsmMatrixMult.cpp  AsmMatrixMult.s  MatrixMult.cpp  check.cpp  mainMatrix.cpp  makefile
CourseProject/: CMakeLists.txt  CourseProject_ru_RU.ts  Untitled.mdj  main.cpp  programwindow.cpp  programwindow.h  programwindow.ui  userDialog.h
CourseProject/Core/: flatCoords.cpp  flatCoords.h  node_list.cpp  node_list.h  rgbColor.cpp  rgbColor.h  spaceCoords.cpp  spaceCoords.h
CourseProject/Interface/: QtFactory.cpp  QtFactory.h  abstractFactory.cpp  abstractFactory.h
CourseProject/Interface/button/: pushButton.cpp  pushButton.h  qtButton.cpp  qtButton.h  qtButtonMediator.hpp
CourseProject/Interface/canvas/: baseCanvas.cpp  baseCanvas.h  myQObject.cpp  myQObject.h  qtCanvas.cpp  qtCanvas.h
CourseProject/Interface/dialog/: user_dialog.cpp  user_dialog.h
CourseProject/Interface/menu/: canvasMenu.cpp  canvasMenu.h  qtCanvasMenu.cpp  qtCanvasMenu.h  removeStrategy.cpp
CourseProject/Interface/scene/: baseScene.cpp  baseScene.h
CourseProject/Meta/: settings.cpp  settings.h
CourseProject/Objects/: atomObject.cpp  atomObject.h  baseObject.cpp  baseObject.h  baseVisitor.h  compositObject.cpp  compositObject.h  distanceVisitor.cpp  distanceVisitor.h  drawVisitor.cpp  drawVisitor.h  factoryVisitor.h  lineObject.cpp  lineObject.h  moveVisitor.cpp  moveVisitor.h  removeVisitor.h
CourseProject/Painter/: PainterImp.h  QtPainterImp.h  molPainter.cpp  molPainter.h  qtPainterImp.cpp
CourseProject/Scene/: baseCanvas.h  cursor.cpp  cursor.h
CourseProject/builder/: builder.cpp  builder.h  director.cpp  director.h  springBuilder.cpp  springBuilder.h
CourseProject/mediator/: canvasMediator.cpp  canvasMediator.h  flatCanvasMediator.cpp  flatCanvasMediator.h  spaceCanvasMediator.cpp  spaceCanvasMediator.h
CourseProject/model/: command_main.cpp  command_main.h
CourseProject/model/image/: image.cpp  image.h
CourseProject/model/inc/: atom.cpp  atom.h  camera.cpp  camera.h  connect.h  connection.cpp  connection.h  matrix4x4.cpp  matrix4x4.h  sphere.cpp  sphere.h  status.h
CourseProject/model/instruction/: drawing.cpp  drawing.h  model_data.h  moving.cpp  moving.h  rotating.cpp  rotating.h  scaling.cpp  scaling.h
CourseProject/model/myMath/: my_math.cpp  my_math.h
CourseProject/strategy/action/: LineAtomAction.h  actionStrategy.cpp  actionStrategy.h  lineSwapAction.cpp  lineSwapAction.h  moveStrategy.cpp  moveStrategy.h  placeFigureAction.cpp  placeFigureAction.h  placeSelectedAction.cpp  placeSelectedAction.h  removeStrategy.cpp  removeStrategy.h
CourseProject/strategy/select/: selectStrategy.cpp  selectStrategy.h
